<resources>
    <string name="Cuenta">Account</string>
    <string name="FAQ">FAQ</string>
    <string name="LEVEL_">LEVEL:</string>
    <string name="PP"><u>Privacy Policy</u></string>
    <string name="TyC"><u>Terms and Conditions.</u></string>
    <string name="TyC_content"><b>TERMS AND CONDITIONS</b>"

 By using the service you are accepting the terms and conditions. Please read it carefully before using AmblyoMobile. It is your responsibility to agree or disagree with these terms.
     
These terms are applicable to all visitors and users of the application without exception. Therefore, if you do not agree with the terms, do not use the.
     
The AmblyoMobile application owned by Envemos Software, applies all the terms and conditions set forth herein, and reserves the right to change the terms of this Terms and Conditions Policy at any time.
     
IT IS NOT CURRENTLY SUPPORTED BY ANY MEDICAL AUTHORITY. YOU MUST BE AWARE THAT YOU ARE NOT USING A MEDICAL SERVICE. ONLY IN YOU DO YOU RECOVER THE RESPONSIBILITY AND CARE OF YOUR HEALTH. BEFORE USING THE SERVICE, CONSULT WITH A PROFESSIONAL IF YOU SEE IT NECESSARY. IT IS NOT RESPONSIBLE FOR ANY DAMAGE OR INJURY THAT MAY RESULT FROM THE USE OF THIS. ONLY AT THE USER IS THE RESPONSIBILITY ABOUT HOW AND HOW YOU ARE GOING TO USE IT. IF YOU SUFFER ANY SERIOUS HEALTH PROBLEMS, YOU MUST CALL IMMEDIATELY THE EMERGENCY SERVICES OR GO TO YOUR CORRESPONDING HEALTH CENTER. IF YOU HAVE AN EYE OR MINK PROBLEM, YOU MUST FIRST GO TO AN OPHTHALMOLOGIST, OCULIST OR PROFESSIONAL OPTOMETRIST AND FOLLOW HIS INDICATIONS.
     
This application is focused on an alternative treatment of amblyopia through games with the use of anaglyph glasses. However, you do not need anaglyph glasses if all you want is to play the games. Therefore, anyone can play without anaglyph glasses for mere fun without any problem, whether or not they have visual problems.
     
In the case of playing with the anaglyph glands, it can ONLY be done by people without visual problems or people with functional amblyopia, result of anisometropia (important difference in visual acuity between both eyes) or strabismus already corrected.
     
In contrast, people who suffer from uncorrected strabismus may face developing a double vision problem (diplopia). In this case, DO NOT play with anaglyph glasses while your squint is not corrected.
     
We emphasize it again. Visual therapy DOES NOT WORK TO HEAL THE STRATEGY. If you suffer from strabismus DO NOT USE our therapy. First you must correct your strabismus.
     
If the user of the application is a minor, it must be under the supervision of an adult or guardian responsible for their health and care. It is the responsibility of EVERYTHING in how much the child does in this space, including all the damages that may be caused. Otherwise, the owner is also responsible for the unsupervised use by the child, even if he / she did not know the same existence of this page.
     
The games are suitable for all audiences in terms of gameplay and content, and AmblyoMobile is responsible for it. If the user considers that this regulation is not complied with, he has the right to contact, through the contact email, communicating the incident.
     
Before any doubt, question or problem. First read the section Frequently asked questions. If this has not been resolved write to the contact email.
     
The contact email is envemos@gmail.com.
 "</string>
    <string name="_privacidad">Privacy</string>
    <string name="_score">Score:</string>
    <string name="a_ans0">The vague eye or amblyopia is the most frequent reason for vision loss among children and young people in developed countries and affects approximately 3% of the population. It happens as a result of inadequate brain processing, because one of the eyes does not communicate well with the brain (it can be due to multiple causes such as strabismus, graduation differences between both eyes, anisometropia, aniseiconía, congenital cataracts) not reaching the optimal visual acuity, nor using the best optical correction. Which causes the weaker eye to be suppressed by the stronger eye. People with lazy eye do not have a developed percepcle of depth. It is very important to correct this visual defect during childhood (before 7 or 8 years), because if it is passed, the patient can completely lose the vision of the eye that does not use.</string>
    <string name="a_ans1">"The treatment for amblyopia is to force the lazy eye to use. The most popular is for the child to wear the 'good' eye patch for several hours every day for a few weeks or months. Once childhood is over, there is nothing to do for lack of cerebral plasticity.
However, it has been found that play is effective in the treatment of amblyopia in adults, also known as 'lazy eye ', of According to new research.
Gaming information is shared by both eyes, forcing them to cooperate.
When both eyes cooperate, the amblyopic brain can relearn as a result of an increase in the level of plasticity in the brain. Patients who played with both eyes experienced a significant improvement in their vision of the weaker eye after only two weeks."</string>
    <string name="a_ans2">These games can help you. With the right settings, applications can force the brain to use both eyes simultaneously to teach the brain proper image processing. Each part of the image is filtered only by one of the two eyes and this is achieved by filtering colors by putting on anaglyph glasses. Always make sure that only one of the eyes can see the left or right color. game requires that information be sent to both eyes to work cooperatively.</string>
    <string name="a_ans3">If you suffer from strabismus then you can NOT use this treatment because you may develop a double vision problem (diplopia). However, anyone can play games without anaglyph glasses simply for fun. You will find all the information in the terms and conditions.</string>
    <string name="a_ans4">Yes, it has been discovered that these games are an effective exercise even for adults because they are based on teamwork of the eyes and force both of them to work together. In fact it is designed for adults suffering from amblyopia. Because traditional medicine only makes an early treatment until age 8 with the use of the patch, and after that age is considered impossible or very complicated. This is an alternative method for curing amblyopia for adults who feel encouraged to experiment with it.</string>
    <string name="a_ans5">"It's not. It is an alternative therapy that is not supported by a professional but offers good results. First of all you must go to a professional and follow their instructions, we do not substitute the work of anyone. All this is stipulated in the \"terms and conditions\"."</string>
    <string name="a_ans6">Yes of course. The games are suitable for all audiences in terms of gameplay and content. If you are a minor you must be under the supervision of an adult. All this is stipulated in the terms and conditions.</string>
    <string name="a_faq0">What is lazy eye or amblyopia?</string>
    <string name="a_faq1">Treatment</string>
    <string name="a_faq2">Filter the image with the correct colors</string>
    <string name="a_faq3">What happens if I suffer strabismus?</string>
    <string name="a_faq4">Are games also beneficial for adults?</string>
    <string name="a_faq5">Is it backed by a medical authority?</string>
    <string name="a_faq6">Are the games aimed at minors?</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_contact_us">Contact us</string>
    <string name="about_facebook">Like us on Facebook</string>
    <string name="about_github">Fork us on GitHub</string>
    <string name="about_instagram">Follow us on Instagram</string>
    <string name="autoincrementar_velocidad">Autoincrement speed</string>
    <string name="breaker">Breaker</string>
    <string name="buy">UNLIMITED :)</string>
    <string name="change_table_button_label">Change Table</string>
    <string name="end_game_button_label">End Game</string>
    <string name="flappy">Flappy</string>
    <string name="games"><u>GAMES</u></string>
    <string name="guardar_cambios">Save changes</string>
    <string name="help_button_label">Help</string>
    <string name="high_quality_pref_summary_off">Lower quality but faster graphics</string>
    <string name="high_quality_pref_summary_on">Higher quality but slower graphics</string>
    <string name="high_quality_pref_title">High Quality</string>
    <string name="independent_flippers_pref_summary_off">Any touch activates all flippers</string>
    <string name="independent_flippers_pref_summary_on">A touch activates the flippers on the same side of the screen</string>
    <string name="independent_flippers_pref_title">Independent Flippers</string>
    <string name="level">Level:</string>
    <string name="mi_actividad">My Activity</string>
    <string name="muros">Walls</string>
    <string name="music_pref_title">Background Music</string>
    <string name="pacman">Pac-Man</string>
    <string name="pinball">Pinball</string>
    <string name="pong">Pong</string>
    <string name="preferences_button_label">Preferences</string>
    <string name="score">Score:</string>
    <string name="sesi_n">Session</string>
    <string name="show_fps_pref_title">Show FPS</string>
    <string name="snake">Snake</string>
    <string name="sound_pref_title">Sound</string>
    <string name="space">Space Invaders</string>
    <string name="tetris">Tetris</string>
    <string name="time">Time:</string>
    <string name="title">AMBLYOMOBILE</string>
    <string name="title_activity_settings">Settings</string>
    <string name="unlimited_balls_label">Unlimited Balls</string>
    <string name="use_opengl_pref_title">OpenGL Rendering</string>
    <string name="velocidad">Speed</string>
    <string name="volver_al_men">Get back to the main menu</string>
    <string name="zoom_pref_title">Zoom Playfield</string>
</resources>