<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/grisClaro" android:padding="@dimen/padding1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/scrollViewActivityMenuScrollView" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin1" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/GamesTitle" android:layout_gravity="center" android:id="@id/textViewActivityMenuTitleGames" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin1" android:text="@string/games" android:textAlignment="center" app:layout_constraintTop_toTopOf="parent" />
            <GridLayout android:layout_gravity="center" android:id="@id/gridLayoutActivityMenu" android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_marginTop="@dimen/BotonJuegoMargin" android:layout_weight="1.0" android:rowCount="2" android:columnCount="2" app:layout_constraintTop_toBottomOf="@id/textViewActivityMenuTitleGames">
                <Button android:textSize="@dimen/BotonJuegoText" android:gravity="center" android:layout_gravity="fill" android:id="@id/ButtonActivityMenuSnake" android:layout_width="@dimen/BotonJuegoDimen" android:layout_height="@dimen/BotonJuegoDimen" android:layout_margin="@dimen/BotonJuegoMargin" android:layout_column="0" android:text="@string/snake" android:onClick="Snake" android:layout_row="0" />
                <Button android:textSize="@dimen/BotonJuegoText" android:gravity="center" android:layout_gravity="fill" android:id="@id/ButtonActivityMenuTetris" android:layout_width="@dimen/BotonJuegoDimen" android:layout_height="@dimen/BotonJuegoDimen" android:layout_margin="@dimen/BotonJuegoMargin" android:text="@string/tetris" android:onClick="Tetris" />
                <Button android:textSize="@dimen/BotonJuegoText" android:gravity="center" android:layout_gravity="fill" android:id="@id/ButtonActivityMenuFlappy" android:layout_width="@dimen/BotonJuegoDimen" android:layout_height="@dimen/BotonJuegoDimen" android:layout_margin="@dimen/BotonJuegoMargin" android:text="@string/flappy" android:onClick="Flappy" />
                <Button android:textSize="@dimen/BotonJuegoText" android:gravity="center" android:layout_gravity="fill" android:id="@id/ButtonActivityMenuBreake" android:layout_width="@dimen/BotonJuegoDimen" android:layout_height="@dimen/BotonJuegoDimen" android:layout_margin="@dimen/BotonJuegoMargin" android:text="@string/breaker" android:onClick="Breaker" />
            </GridLayout>
            <GridLayout android:layout_gravity="center" android:id="@id/gridLayoutActivityMenuPremium" android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_marginTop="@dimen/BotonJuegoMargin" android:layout_weight="1.0" android:rowCount="2" android:columnCount="2" app:layout_constraintTop_toBottomOf="@id/textViewActivityMenuTitleGames">
                <Button android:textSize="@dimen/BotonJuegoText" android:gravity="center" android:layout_gravity="fill" android:id="@id/ButtonActivityMenuSpace" android:layout_width="@dimen/BotonJuegoDimen" android:layout_height="@dimen/BotonJuegoDimen" android:layout_margin="@dimen/BotonJuegoMargin" android:layout_column="0" android:text="@string/space" android:onClick="Space" android:layout_row="0" />
                <Button android:textSize="@dimen/BotonJuegoText" android:gravity="center" android:layout_gravity="fill" android:id="@id/ButtonActivityMenuPong" android:layout_width="@dimen/BotonJuegoDimen" android:layout_height="@dimen/BotonJuegoDimen" android:layout_margin="@dimen/BotonJuegoMargin" android:text="@string/pong" android:onClick="Pong" />
                <Button android:textSize="@dimen/BotonJuegoText" android:gravity="center" android:layout_gravity="fill" android:id="@id/ButtonActivityMenuPacMan" android:layout_width="@dimen/BotonJuegoDimen" android:layout_height="@dimen/BotonJuegoDimen" android:layout_margin="@dimen/BotonJuegoMargin" android:text="@string/pacman" android:onClick="PacMan" />
                <Button android:textSize="@dimen/BotonJuegoText" android:gravity="center" android:layout_gravity="fill" android:id="@id/ButtonActivityMenuPinball" android:layout_width="@dimen/BotonJuegoDimen" android:layout_height="@dimen/BotonJuegoDimen" android:layout_margin="@dimen/BotonJuegoMargin" android:text="@string/pinball" android:onClick="Pinball" />
            </GridLayout>
            <ImageView android:layout_gravity="center" android:id="@id/imageViewActivityMenuAtras" android:background="@drawable/boton_redondeado" android:padding="@dimen/padding1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/margin2" android:layout_marginBottom="@dimen/margin2" android:src="@drawable/go_left" android:onClick="go_back" android:contentDescription="@string/volver_al_men" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>