<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <soft.evm.amblyopiamobilegames.juegos.pinball.game.ScoreView android:id="@id/scoreView" android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0" android:onClick="scoreViewClicked" />
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="9.0">
        <soft.evm.amblyopiamobilegames.juegos.pinball.game.CanvasFieldView android:id="@id/canvasFieldView" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <soft.evm.amblyopiamobilegames.juegos.pinball.game.GLFieldView android:id="@id/glFieldView" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/buttonPanel" android:background="#88444488" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <Button android:id="@id/endGameButton" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/end_game_button_label" android:onClick="doEndGame" />
                <Button android:id="@id/switchTableButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/change_table_button_label" android:onClick="doSwitchTable" />
                <Button android:id="@id/aboutButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_button_label" android:onClick="doAbout" />
                <Button android:id="@id/preferencesButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/preferences_button_label" android:onClick="doPreferences" />
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <CheckBox android:id="@id/unlimitedBallsToggle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unlimited_balls_label" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>