<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/grisClaro" android:padding="@dimen/padding1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/scrollViewActivityMain" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_margin="@dimen/margin1" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/amblyoMobileTitle" android:gravity="center" android:id="@id/textViewActivityWelcomeTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/title" app:layout_constraintBottom_toTopOf="@id/buttonActivityWelcomeLogin" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <ImageButton android:layout_gravity="center_horizontal" android:id="@id/imageButtonMainOffer" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin1" android:scaleType="fitXY" android:adjustViewBounds="true" android:cropToPadding="false" android:onClick="buy" android:contentDescription="@string/buy" />
            <GridLayout android:layout_gravity="center" android:id="@id/gridLayoutActivityMenu" android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="1.0" android:rowCount="3" android:columnCount="2">
                <Button android:textSize="@dimen/BotonJuegoText" android:gravity="center" android:layout_gravity="fill" android:id="@id/ButtonActivityMenuSnake" android:layout_width="@dimen/BotonJuegoDimen" android:layout_height="@dimen/BotonJuegoDimen" android:layout_margin="@dimen/BotonJuegoMargin" android:layout_column="0" android:text="@string/snake" android:onClick="Snake" android:layout_row="0" />
                <Button android:textSize="@dimen/BotonJuegoText" android:gravity="center" android:layout_gravity="fill" android:id="@id/ButtonActivityMenuTetris" android:layout_width="@dimen/BotonJuegoDimen" android:layout_height="@dimen/BotonJuegoDimen" android:layout_margin="@dimen/BotonJuegoMargin" android:text="@string/tetris" android:onClick="Tetris" />
                <Button android:textSize="@dimen/BotonJuegoText" android:gravity="center" android:layout_gravity="fill" android:id="@id/ButtonActivityMenuFlappy" android:layout_width="@dimen/BotonJuegoDimen" android:layout_height="@dimen/BotonJuegoDimen" android:layout_margin="@dimen/BotonJuegoMargin" android:text="@string/flappy" android:onClick="Flappy" />
                <Button android:textSize="@dimen/BotonJuegoText" android:gravity="center" android:layout_gravity="fill" android:id="@id/ButtonActivityMenuBreake" android:layout_width="@dimen/BotonJuegoDimen" android:layout_height="@dimen/BotonJuegoDimen" android:layout_margin="@dimen/BotonJuegoMargin" android:text="@string/breaker" android:onClick="Breaker" />
                <Button android:textSize="@dimen/BotonJuegoText" android:gravity="center" android:layout_gravity="fill" android:id="@id/ButtonActivityMenuSpace" android:layout_width="@dimen/BotonJuegoDimen" android:layout_height="@dimen/BotonJuegoDimen" android:layout_margin="@dimen/BotonJuegoMargin" android:layout_column="0" android:text="@string/space" android:onClick="Space" android:layout_row="2" />
                <Button android:textSize="@dimen/BotonJuegoText" android:gravity="center" android:layout_gravity="fill" android:id="@id/ButtonActivityMenuPong" android:layout_width="@dimen/BotonJuegoDimen" android:layout_height="@dimen/BotonJuegoDimen" android:layout_margin="@dimen/BotonJuegoMargin" android:layout_column="1" android:text="@string/pong" android:onClick="Pong" android:layout_row="2" />
                <Button android:textSize="@dimen/BotonJuegoText" android:gravity="center" android:layout_gravity="fill" android:id="@id/ButtonActivityMenuPacMan" android:layout_width="@dimen/BotonJuegoDimen" android:layout_height="@dimen/BotonJuegoDimen" android:layout_margin="@dimen/BotonJuegoMargin" android:text="@string/pacman" android:onClick="PacMan" />
                <Button android:textSize="@dimen/BotonJuegoText" android:gravity="center" android:layout_gravity="fill" android:id="@id/ButtonActivityMenuPinball" android:layout_width="@dimen/BotonJuegoDimen" android:layout_height="@dimen/BotonJuegoDimen" android:layout_margin="@dimen/BotonJuegoMargin" android:text="@string/pinball" android:onClick="Pinball" />
            </GridLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin2" android:layout_marginTop="@dimen/margin1" android:layout_marginBottom="0.0dip">
                <soft.evm.amblyopiamobilegames.utils.GifImageView android:layout_gravity="center" android:id="@id/cargandoSesion" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin2" android:layout_marginRight="@dimen/margin2" android:layout_marginBottom="@dimen/margin2" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <ImageView android:layout_gravity="center" android:id="@id/buttonActivityMainSesion" android:background="@drawable/boton_redondeado" android:padding="@dimen/padding1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/male" android:onClick="verSesion" android:contentDescription="@string/sesi_n" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <ImageView android:layout_gravity="center" android:id="@id/imageViewActivityMainFAQ" android:background="@drawable/boton_redondeado" android:padding="@dimen/padding1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/info" android:onClick="verInfo" android:contentDescription="@string/mi_actividad" app:layout_constraintEnd_toStartOf="@id/buttonActivityMainOpciones" app:layout_constraintStart_toEndOf="@id/buttonActivityMainSesion" app:layout_constraintTop_toTopOf="parent" />
                <ImageView android:layout_gravity="center" android:id="@id/buttonActivityMainOpciones" android:background="@drawable/boton_redondeado" android:padding="@dimen/padding1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/settings" android:onClick="verOpciones" android:contentDescription="@string/title_activity_settings" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin2" android:layout_marginTop="0.0dip" android:layout_marginRight="@dimen/margin2" android:layout_marginBottom="@dimen/margin1">
                <soft.evm.amblyopiamobilegames.utils.GifImageView android:layout_gravity="center" android:id="@id/cargandoActividad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/margin2" android:layout_marginBottom="@dimen/margin2" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <ImageView android:layout_gravity="center" android:id="@id/buttonActivityVerActividad" android:background="@drawable/boton_redondeado" android:padding="@dimen/padding1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/calendar3" android:onClick="verActividad" android:contentDescription="@string/mi_actividad" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <ImageView android:layout_gravity="center" android:id="@id/buttonActivityDailyTime" android:background="@drawable/boton_redondeado" android:padding="@dimen/padding1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/clock" android:onClick="verDailyTime" android:contentDescription="@string/title_activity_settings" app:layout_constraintEnd_toStartOf="@id/buttonActivityRemidMe" app:layout_constraintStart_toEndOf="@id/buttonActivityVerActividad" app:layout_constraintTop_toTopOf="parent" />
                <ImageView android:layout_gravity="center" android:id="@id/buttonActivityRemidMe" android:background="@drawable/boton_redondeado" android:padding="@dimen/padding1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/history_clock_button" android:onClick="verRemidMe" android:contentDescription="@string/sesi_n" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>